--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "note-app",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon ./src/server.js",
+        "start-prod": "NODE_ENV=production node ./src/server.js",
+        "start-dev": "nodemon ./src/server.js",
         "lint": "eslint ./src",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
